--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -83,6 +83,7 @@
 		<li>{{{createLink 'ractive.findParent()'}}}</li>
 		<li>{{{createLink 'ractive.fire()'}}}</li>
 		<li>{{{createLink 'ractive.get()'}}}</li>
+		<li>{{{createLink 'instance.getNodeInfo()' 'ractive.getNodeInfo()'}}}</li>
 		<li>{{{createLink 'ractive.insert()'}}}</li>
 		<li>{{{createLink 'ractive.link()'}}}</li>
 		<li>{{{createLink 'ractive.merge()'}}}</li>
