--- a/docs/edge/ractive.link().md.hbs
+++ b/docs/edge/ractive.link().md.hbs
@@ -15,7 +15,7 @@ This can be used to great effect with method events and the `@keypath` special r
   \{{#each list}}
     \{{#with item}}
       \{{.name}}
-      <button on-click="link(@keypath, 'current')">Select</button>
+      <button on-click="event.link('.', 'current')">Select</button>
     \{{/with}}
   \{{/each}}
 \{{/each}}
