--- a/docs/edge/Migrating.md.hbs
+++ b/docs/edge/Migrating.md.hbs
@@ -62,7 +62,7 @@ Event objects created by event directives and the results of {{{createLink 'Ract
 
 * `\{{#with obj}}` will no longer render if `obj` is falsey (https://github.com/ractivejs/ractive/issues/1856)
 
-* Method event calls and proxy events with arguments are now deprecated and being replaced with {{{createLink 'events' 'event expressions' }}}.
+* Method event calls and proxy events with arguments are now deprecated and being replaced with {{{createLink 'Method calls' 'event expressions' }}}.
 
 * {{{createLink 'events' 'Event objects' }}} now have fairly comprehensive contextual helpers installed on them. The old `keypath`, `key`, `index` properties are deprecated.
 
