--- a/docs/edge/Options.md.hbs
+++ b/docs/edge/Options.md.hbs
@@ -269,7 +269,7 @@ ractive.myMethod(); // triggers the alert
 > ```
 > <a id="modifyArrays"></a>
 > ### modifyArrays *`Boolean`*
-> Defaults to `true`. Whether or not to modify array mutator methods to enable frictionless data binding with lists (see {{{createLink 'array modification'}}}).
+> Defaults to `false`. Whether or not to modify array mutator methods to enable frictionless data binding with lists (see {{{createLink 'array modification'}}}).
 > ```js
 > var items = [ 'red', 'blue' ];
 > new Ractive({
