--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -97,8 +97,10 @@
 		<li>{{{createLink 'ractive.render()'}}}</li>
 		<li>{{{createLink 'ractive.reset()'}}}</li>
 		<li>{{{createLink 'ractive.resetPartial()'}}}</li>
+		<li>{{{createLink 'ractive.reverse()'}}}</li>
 		<li>{{{createLink 'ractive.set()'}}}</li>
 		<li>{{{createLink 'ractive.shift()'}}}</li>
+		<li>{{{createLink 'ractive.sort()'}}}</li>
 		<li>{{{createLink 'ractive.splice()'}}}</li>
 		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
