goodbye, cruel IE8

--- a/docs/edge/Migrating.md.hbs
+++ b/docs/edge/Migrating.md.hbs
@@ -58,6 +58,8 @@ Transitioning elements will not longer keep unrelated elements from being remove
 
 * **Templates parsed with previous versions of Ractive are no longer compatible.**
 
+* IE8 is no longer supported.
+
 * Two-way binding is no longer allowed in computed contexts e.g. `\{{#each filter(someList)}}<input value="\{{.prop}}" />\{{/each}}` because changes to the computed child (`filter(someList).0.prop` aren't kept in sync with their source (`someList.?.prop`) as Ractive doesn't know how to reverse the expression. There is an ongoing discussion about how to address this, including an open PR that would put this behavior behind a flag and attempt to keep the sources up to date as the computation children changed.
 
 * Names in partial mustaches have been further relaxed to allow `/`s. They can also now handle relative contexts because partial name expressions no longer support spaces around the `.` delimiters in object paths. `\{{> foo.bar.baz .bat}}` before this change would have parsed as a single expression to get the partial name from `foo.bar.baz.bat`. It will now get the name from `foo.bar.baz` and have a context provided from `.bat`.
