Add Ractive-Foundation to list of available component plugins

--- a/docs/0.8/Plugins.md.hbs
+++ b/docs/0.8/Plugins.md.hbs
@@ -22,6 +22,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
 * [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
 * [Datatable](https://github.com/JonDum/ractive-datatable)
+* [Foundation](http://ractive-foundation.github.io/ractive-foundation)
 * [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
 * [Select](https://github.com/JonDum/ractive-select) a `<select>` replacement component
 * [Stepper](https://github.com/JonDum/ractive-stepper) a numeric stepper component
