Add Chrome Ractive Dev Tool to the list

--- a/docs/0.8/Plugins.md.hbs
+++ b/docs/0.8/Plugins.md.hbs
@@ -59,4 +59,8 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Slide](http://ractivejs.github.io/ractive-transitions-slide)
 * [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
 
+## Development Tools
+
+* [Chrome - Ractive Dev Tool](https://chrome.google.com/webstore/detail/ractive-dev-tool/mobaekclikghnakiffjacknpimanblii)
+
 
