--- a/templates/0.5/partials/left-nav.md.hbs
+++ b/templates/0.5/partials/left-nav.md.hbs
@@ -127,6 +127,7 @@
 
 	<ul>
 		<li><a href='../edge'>edge</a></li>
+		<li><a href='../0.8'>0.8</a></li>
 		<li><a href='../0.7'>0.7</a></li>
 		<li><a href='../0.6'>0.6</a></li>
 		<li><a href='../0.5'>0.5</a></li>
