Correct onrender description. Fixes #265

--- a/docs/0.6/Components.md.hbs
+++ b/docs/0.6/Components.md.hbs
@@ -31,7 +31,7 @@ This could include setting/changing partials, adding decorators, adding other su
 
 ### onrender *`Function`*
 
-`onrender` fires just before each time the component is rendered.
+`onrender` fires just after the component is rendered.
 
 ### oncomplete *`Function`*
 
