Document ractive.toCSS and Ractive.getCSS

--- a/templates/0.8/partials/left-nav.md.hbs
+++ b/templates/0.8/partials/left-nav.md.hbs
@@ -104,6 +104,7 @@
 		<li>{{{createLink 'ractive.splice()'}}}</li>
 		<li>{{{createLink 'ractive.subtract()'}}}</li>
 		<li>{{{createLink 'ractive.teardown()'}}}</li>
+		<li>{{{createLink 'ractive.toCSS()'}}}</li>
 		<li>{{{createLink 'ractive.toggle()'}}}</li>
 		<li>{{{createLink 'ractive.toHTML()'}}}</li>
 		<li>{{{createLink 'ractive.transition()'}}}</li>
@@ -126,6 +127,7 @@
 	<ul>
 		<li>{{{createLink 'Ractive.escapeKey()'}}}</li>
 		<li>{{{createLink 'Ractive.extend()'}}}</li>
+		<li>{{{createLink 'Ractive.getCSS()'}}}</li>
 		<li>{{{createLink 'Ractive.getNodeInfo()'}}}</li>
 		<li>{{{createLink 'Ractive.joinKeys()'}}}</li>
 		<li>{{{createLink 'Ractive.parse()'}}}</li>
