update terribly out of date adaptor demo fiddle

--- a/docs/0.8/Writing adaptor plugins.md.hbs
+++ b/docs/0.8/Writing adaptor plugins.md.hbs
@@ -182,7 +182,7 @@ boxAdaptor = {
 };
 ```
 
-You can see this adaptor in action [in a JSFiddle here](http://jsfiddle.net/rich_harris/ATAgH/). Notice that because our wrapper includes a `set` method, {{{createLink 'two-way binding'}}} works seamlessly.
+You can see this adaptor in action [in a JSFiddle here](http://jsfiddle.net/ATAgH/33/). Notice that because our wrapper includes a `set` method, {{{createLink 'two-way binding'}}} works seamlessly.
 
 
 Adding polish
