Typo fix in advanced-configuration > Template docs

--- a/docs/0.8/Advanced configuration.md.hbs
+++ b/docs/0.8/Advanced configuration.md.hbs
@@ -25,7 +25,7 @@ new Ractive({
 });
 ```
 The return value can be any of the valid template options: a preparsed template,
-a string that will parsed as a template, or an string starting with `#` that refers to an element id from which
+a string that will be parsed as a template, or an string starting with `#` that refers to an element id from which
 the template should be retrieved.
 
 In general, these should be sufficient for most use cases. However, if you need to dissect templates or extract
